--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,20 @@ pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 /generated/prisma
+
+# Test coverage
+coverage/
+*.lcov
+
+# Build
+dist/
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# CI/CD
+.env.ci
+.env.test
