--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
     name: Lint and Test
     runs-on: ubuntu-latest
 
+      env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      NODE_ENV: test
+
     strategy:
       matrix:
         node-version: [18.x, 20.x]
