--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "render:build": "./scripts/render-build.sh",
+    "render:start": "./scripts/render-start.sh"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
@@ -29,7 +31,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^11.0.0",
+    "@nestjs/cli": "^10.0.0",
     "@prisma/client": "^6.19.0",
+    "prisma": "^6.19.0",
     "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -39,7 +43,6 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
@@ -53,7 +56,6 @@
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^6.19.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.0",
