feat: test deployment pipeline

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -6,6 +6,13 @@ on:
       - main
   workflow_dispatch:
 
+
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+    
+
 jobs:
   deploy:
     name: Deploy to Render Production
