--- a/.github/workflows/status-checks.yml
+++ b/.github/workflows/status-checks.yml
@@ -30,20 +30,41 @@ jobs:
             chore
             revert
 
-  label-check:
-    name: Label Check
+  auto-label:
+    name: Auto Label PR
     runs-on: ubuntu-latest
     steps:
-      - name: Check for labels
+      - name: Add inferred label from PR title
         uses: actions/github-script@v7
         with:
           script: |
-            const labels = context.payload.pull_request.labels.map(l => l.name);
-            if (labels.length === 0) {
-              core.setFailed('PR must have at least one label');
+            const pr = context.payload.pull_request;
+            if (!pr) {
+              core.info('No pull_request payload. Skipping.');
+              return;
             }
 
+            const title = pr.title.toLowerCase();
+            let label = null;
 
-### Step 5.6: Update .gitignore for CI
+            if (title.startsWith('feat')) label = 'feat';
+            else if (title.startsWith('fix')) label = 'fix';
+            else if (title.startsWith('docs')) label = 'docs';
+            else if (title.startsWith('style')) label = 'style';
+            else if (title.startsWith('refactor')) label = 'refactor';
+            else if (title.startsWith('perf')) label = 'perf';
+            else if (title.startsWith('test')) label = 'test';
+            else if (title.startsWith('build')) label = 'build';
+            else if (title.startsWith('ci')) label = 'ci';
+            else if (title.startsWith('chore')) label = 'chore';
+            else if (title.startsWith('revert')) label = 'revert';
+            else label = 'needs-label';
 
- 
+            await github.issues.addLabels({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: pr.number,
+              labels: [label]
+            });
+
+            core.info(`Automatically applied label: ${label}`);
