--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "careerly-kids",
   "version": "0.0.1",
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
-  "description": "",
-  "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "description": "",
+  "author": "",
+
+  "engines": {
+    "node": "20.x"
+  },
+
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/main.js",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,9 +26,11 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
+
     "render:build": "./scripts/render-build.sh",
     "render:start": "./scripts/render-start.sh"
   },
+
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
     "@nestjs/cli": "^10.0.0",
@@ -46,6 +50,7 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
   },
+
   "devDependencies": {
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
