--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "render:start": "./scripts/render-start.sh"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^2.0.29",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/swagger": "^11.2.3",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^6.19.0",
+    "ai": "^5.0.95",
     "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -44,7 +47,8 @@
     "prisma": "^6.19.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.0",
