--- a/.github/workflows/pr-staging.yml
+++ b/.github/workflows/pr-staging.yml
@@ -49,8 +49,7 @@ jobs:
         uses: actions/github-script@v7
         if: always()
         with:
-            github-token: ${{ secrets.GITHUB_TOKEN }}
-
+          withub-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const status = '${{ job.status }}';
             const emoji = status === 'success' ? '✅' : '❌';
